measuring culture post

--- a/about/index.html
+++ b/about/index.html
@@ -78,7 +78,9 @@ if (!doNotTrack) {
   <ul class='list taxonomy-cloud'><li>
         <a href='/tags/cto/' style='font-size:1em'>CTO</a>
       </li><li>
-        <a href='/tags/culture/' style='font-size:1em'>Culture</a>
+        <a href='/tags/culture/' style='font-size:2em'>Culture</a>
+      </li><li>
+        <a href='/tags/devops/' style='font-size:1em'>Devops</a>
       </li></ul>
 </div>
 
