--- a/engineering-compensation-fair/index.html
+++ b/engineering-compensation-fair/index.html
@@ -78,7 +78,9 @@ if (!doNotTrack) {
   <ul class='list taxonomy-cloud'><li>
         <a href='/tags/cto/' style='font-size:1em'>CTO</a>
       </li><li>
-        <a href='/tags/culture/' style='font-size:1em'>Culture</a>
+        <a href='/tags/culture/' style='font-size:2em'>Culture</a>
+      </li><li>
+        <a href='/tags/devops/' style='font-size:1em'>Devops</a>
       </li></ul>
 </div>
 
@@ -283,7 +285,17 @@ Also, the evaluations for skill and scope are for engineers and not anyone in th
   
 </svg>
  Previous</span>
-        <span class='screen-reader-text'>Previous post: </span>What does a CTO do?</a>
+        <span class='screen-reader-text'>Previous post: </span>What Does a CTO Do?</a>
+    </div><div class='next-entry sep-before'>
+      <a href='/measuring-your-engineering-culture/'>
+        <span class='screen-reader-text'>Next post: </span>Measuring your Engineering Culture<span aria-hidden='true'>Next <svg class='icon' viewbox='0 0 24 24' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' aria-hidden='true'>
+  
+  <line x1="4" y1="12" x2="20" y2="12"/>
+  <polyline points="14 6 20 12 14 18"/>
+  
+</svg>
+</span>
+      </a>
     </div></div>
 </nav>
 
