moved image to an external linnk

--- a/measuring-your-engineering-culture/index.html
+++ b/measuring-your-engineering-culture/index.html
@@ -217,9 +217,7 @@ if (!doNotTrack) {
 
 <h2 id="westrum-culture-model">Westrum Culture Model</h2>
 
-<p>The last method we use at Weave is the Westrum model. This model is primarily focussed on the transfer of information, and ultimately measures your psychological safety, as made popular by <a href="https://rework.withgoogle.com/blog/five-keys-to-a-successful-google-team/" target="_blank">Google&rsquo;s study on high performing teams</a>. The <a href="https://qualitysafety.bmj.com/content/13/suppl_2/ii22" target="_blank">study itself</a> is old, but a good read. The study also doesn&rsquo;t come with a pre-built survey you can use, but others have made surveys off of this model. We looked at a couple we liked and settled with these questions for now:</p>
-
-<p><img src="/images/westrum-survey.png" alt="Westrum Culture Survey" /></p>
+<p>The last method we use at Weave is the Westrum model. This model is primarily focussed on the transfer of information, and ultimately measures your psychological safety, as made popular by <a href="https://rework.withgoogle.com/blog/five-keys-to-a-successful-google-team/" target="_blank">Google&rsquo;s study on high performing teams</a>. The <a href="https://qualitysafety.bmj.com/content/13/suppl_2/ii22" target="_blank">study itself</a> is old, but a good read. The study also doesn&rsquo;t come with a pre-built survey you can use, but others have made surveys off of this model. We looked at a couple we liked and settled with <a href="https://clintberry.com/images/westrum-survey.png" target="_blank">these questions</a> for now.</p>
 
 <p>If you have any question or comments, feel free to tweet at me.</p>
 
